<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_menu_qr"
        android:name="com.maketicket.qrscaner.ui.home.HomeFragment"
        android:label="@string/title_home" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.maketicket.qrscaner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_qr_scaner"
        android:name="com.maketicket.qrscaner.ui.qr_scaner.QRScanerFragment"
        android:label="@string/qr_scaner"
        tools:layout="@layout/fragment_qr_scaner" />
    <fragment
        android:id="@+id/navigation_order_ticket_qr_scaner"
        android:name="com.maketicket.qrscaner.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.maketicket.qrscaner.ui.user.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />
</navigation>