<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".LoginOneFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_one_text_header"
            style="@style/header_ligth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fragment_one_text_body"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:text="@string/fragment_one_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/fragment_one_text_body"
            style="@style/body_ligth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fragment_one_btn_next"
            android:layout_marginBottom="16dp"
            android:text="@string/fragment_one_body" />

        <Button
            android:id="@+id/fragment_one_btn_next"
            style="@style/btn_seccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:text="@string/fragment_one_netx"
            android:background="@drawable/btn_secundary"

            app:cornerRadius="20dp"
            app:backgroundTint="@color/ic_launcher_background"
            app:iconTint="@color/ic_launcher_background"
            app:rippleColor="@color/ic_launcher_background"
            app:shapeAppearance="@style/btn_seccount" />
    </RelativeLayout>

</FrameLayout>